audio.scss added

--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -6,6 +6,7 @@
 @import "shortcodes/text_strong.scss";
 @import "shortcodes/text_boxes.scss";
 @import "shortcodes/download_file.scss";
+@import "shortcodes/audio.scss";
 // @import "shortcodes/misc_effects.scss";
 
 span{
