--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -18,6 +18,13 @@ span{
 	margin-right: 3px;
 }
 
+.flex-row{
+	display:flex; 
+	gap: 10px;
+	flex-wrap: wrap;
+	justify-content: center;
+	justify-self: center;
+}
 // {{/*  REFACTOR rotate  */}}
 
 
