--- a/assets/css/shortcodes/audio.scss
+++ b/assets/css/shortcodes/audio.scss
@@ -21,7 +21,7 @@ figure.audio-player::before{
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: -1;
+	// z-index: -1;
 	border-radius: 10px;
 	filter: blur(4px) brightness(56%);
 	-webkit-filter: blur(4px) brightness(56%);
@@ -61,6 +61,9 @@ figure.audio-player{
 
 	padding: -100px -100px;
 	font-size: 2rem;
+	& > * {
+		z-index: 1;
+	}
 	div{
 		display: flex;
 		flex-direction: row;
