--- a/assets/css/shortcodes/text_boxes.scss
+++ b/assets/css/shortcodes/text_boxes.scss
@@ -22,6 +22,11 @@ $green-color-dark: rgba(87, 255, 9, 0.13);
 	// width: fit-content;
 	border-radius: 6px;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+	
+	& > * {
+		padding-bottom: 1rem;
+		// gap: 20px;
+	}
 }
 
 .text-box > :first-child{
