--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 {{- $theme := .Params.theme | default .Site.Params.defaultTheme }}
 <html class="{{- if (eq $theme "light") -}}light{{- else if (eq $theme "dark") }}dark{{ end }}" lang="{{- site.LanguageCode | default "en" -}}">
   {{ partial "head.html" . }}
-  <body>
+  <body class="preload-no-transitions">
     {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
     <main>
       {{ if .Site.Params.is_debug}}
