--- a/layouts/shortcodes/header.html
+++ b/layouts/shortcodes/header.html
@@ -1,17 +1,17 @@
 {{- /*  
-Displays article cards.
+Displays a header with align options.
 
 
 Arguments:
-0 articles = (String) Articles file names separated with a COMA. Eg: articles="article1, illustration-process"
-1 title = (String). Add a header title above the articles. Default: (empty)
+1 text = (String). Text of the header.
 2 h = (int) Type of header for the tile (1 for h1, 2 for h2, 3 for h3, etc.). Default: 2 (h2)
 3 align = (String) Text align of the header (options: "left", "right", "center"). Default: "center"
+4 class = (String) CSS class for the header. Default: ""
 
 Use example:
-{{< featured_articles "my-first-article, another-article" >}}
-{{< featured_articles "my-first-article, another-article" "My favourite articles" 3 "left" >}}
-{{< featured_articles title="my-first-article, another-article" title="My favourite articles" align="right" >}}
+{{< header "my-first-article, another-article" >}}
+{{< header "my-first-article, another-article" "My favourite articles" 3 "left" >}}
+{{< header title="my-first-article, another-article" title="My favourite articles" align="right" class="bloom-shadow" >}}
 */ -}}
 
 
@@ -19,7 +19,12 @@ Use example:
 {{- $title := or (.Get 1) (.Get "text") (.Get "t") -}}
 {{- $header_number := or (.Get 2) (.Get "h") | default 2 -}}
 {{- $text_align := or (.Get 3) (.Get "align") | default "center" -}}
+{{- $css_class := or (.Get 4) (.Get "class") | default "" -}}
 
+{{- $css_class_attr := "" -}}
+{{- if $css_class -}}
+	{{- $css_class_attr = (printf "class='%s'" $css_class) | safeHTMLAttr -}}
+{{- end -}}
 
 {{- $header_tag := printf "h%d" $header_number -}}
 
@@ -36,7 +41,7 @@ Use example:
 		{{- /*  {{- $style := printf "text-align:%s;" $text_align -}}  */ -}}
 		{{- $style := (printf "text-align:%s; align-self:%s;" $text_align $flex_align) | safeCSS -}}
 		{{- /*  {{- $header := printf "<%s style='text-align:%s;'>%s</%s>" $header_tag $text_align $title $header_tag -}}  */ -}}
-		{{- $header := printf "<%s style='%s'>%s</%s>" $header_tag $style $title $header_tag -}}
+		{{- $header := printf "<%s %s style='%s'>%s</%s>" $header_tag $css_class_attr $style $title $header_tag -}}
 		{{- $header | safeHTML -}}
 	{{- /*  {{- end -}}  */ -}}
     {{- /*  <section>  */ -}}
