--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -7,6 +7,7 @@
 @import "shortcodes/text_boxes.scss";
 @import "shortcodes/download_file.scss";
 @import "shortcodes/audio.scss";
+@import "shortcodes/images_hover_link.scss";
 // @import "shortcodes/misc_effects.scss";
 
 span{
