--- a/assets/css/shortcodes/images_hover_link.scss
+++ b/assets/css/shortcodes/images_hover_link.scss
@@ -36,7 +36,7 @@
 
 		// object-fit: cover;
 		// // object-fit: contain;
-		transition: opacity 10s;
+		transition: opacity var(--time-img-reveal-out, 10s);
 		// border-radius: 50%;
 		// // opacity: .2;
 
@@ -73,43 +73,18 @@
 
 	&:hover{
 		// First image
-		& img:nth-of-type(1){
-			transition: opacity 2s;
-			// opacity: 0.0;
-			// opacity: 0.8;
-		}
+		// & img:nth-of-type(1){
+		// 	transition: opacity 2s;
+		// 	// opacity: 0.0;
+		// 	// opacity: 0.8;
+		// }
 		
 		// Second image
 		& img:nth-of-type(2){
-			transition: opacity 2s;
+			transition: opacity var(--time-img-reveal-hover, 2s);
 			// position: absolute;
 			opacity: 1;
 		}
 	}
 }
-
-
-// .pfp-image{
-// 	// & > img{
-// 	height: 30vh;
-
-// 	img{
-
-// 		// width: 100%;
-// 		// object-fit: cover;
-// 		// height: 30vh;
-// 		// border-radius: 50%;
-// 		transition: all 300ms;
-// 		transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
-
-
-// 		-webkit-box-shadow: -1px 0px 3px 0px var(--hover-color), 1px 3px 2px 0px var(--pfp-color2), 
-// 				1px 0px 3px 0px var(--pfp-color), 1px -2px 3px 0px var(--pfp-color);
-// 		-moz-box-shadow: -1px 0px 3px 0px var(--hover-color), 1px 3px 2px 0px var(--pfp-color2), 
-// 				1px 0px 3px 0px var(--pfp-color), 1px -2px 3px 0px var(--pfp-color);
-// 		box-shadow: -1px 0px 3px 0px var(--hover-color), 1px 3px 2px 0px var(--pfp-color2), 
-// 				1px 0px 3px 0px var(--pfp-color), 1px -2px 3px 0px var(--pfp-color);
-// 	}
-
-// }
 
