half-border-radius

--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -94,3 +94,11 @@
 	list-style: none;
 }
 
+.half-border-radius{
+	border-radius: 50%;
+	overflow: hidden;
+	& > * {
+		border-radius: 50%;
+	}
+}
+
