--- a/assets/css/shortcodes/images_hover_link.scss
+++ b/assets/css/shortcodes/images_hover_link.scss
@@ -1,74 +1,38 @@
-// REFACTOR RABIA
-
 .hover-reveal-2-images{
-	// height: 30vh;
-	// width: 100%;
-	// height: fit-content;
-	// width: fit-content;
 	height: auto;
 	width: auto;
 	// object-fit: cover;
 	// object-fit: contain;
 	display: block;
 
-
-
-
-	// position: relative;
-	
 	& div{
 		height: 30vh;
 		width: 100%;
 		position: relative;
-
 	}
 	& img{
 		height: 30vh;
 		width: 100%;
-		
-		// // height: fit-content;
-		// // width: fit-content;
-		// height: 100%;
-		// width: 100%;
-		// // height: auto;
-		// // width: auto;
-		// position: absolute;
-
 		// object-fit: cover;
-		// // object-fit: contain;
 		transition: opacity var(--time-img-reveal-out, 10s);
-		// border-radius: 50%;
-		// // opacity: .2;
 
 		display: block;
-		// width: 100%;
-		// height: 100%;
 		object-fit: cover; /* optional, improves image scaling */
-		// object-fit: contain; /* optional, improves image scaling */
-
-
 	}
+
 	// // First image
 	& img:nth-of-type(1){
 		position: absolute;
 		top: 0;
-		// top: -20px;
-		// width: 100%;
-		// opacity: 1.0;
+		// top: -20px; // for debuging z-index
 		z-index: 1;
 	}
 	// Second image
 	& img:nth-of-type(2){
-		// position: absolute;
 		position: relative;
 		top: 0;
-
-		// opacity: 0.0;
 		opacity: 0;
-		// z-index: 1;
 		z-index: 2;
-		// transition: opacity 10s;
-
 	}
 
 	&:hover{
@@ -82,7 +46,6 @@
 		// Second image
 		& img:nth-of-type(2){
 			transition: opacity var(--time-img-reveal-hover, 2s);
-			// position: absolute;
 			opacity: 1;
 		}
 	}
