fix cover articles

--- a/layouts/partials/get-article-card-cover.html
+++ b/layouts/partials/get-article-card-cover.html
@@ -64,7 +64,7 @@ it CAN has its own resources, and will look automatically for an image with the 
 	{{/*  {{ $cover_image_path = (printf "/%s/%s" "en" .Params.article_cover) }}  */}}
 {{ else }}
 	{{ if eq .BundleType "leaf"}}
-		{{ $images := .Resources.Match "cover.*"}}
+		{{ $images := .Resources.Match "**/*cover*"}}
 		{{ if gt (len $images) 0 }}
 			{{ $cover_image := index $images 0 }}
 			{{ $cover_image_path = $cover_image.RelPermalink }}
