--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -447,7 +447,8 @@ hgroup.featured-articles-container{
 	// gap: 0px;
 	justify-content: center;
 	align-content: stretch;
-	width: 100%;
+	// SKYHI
+	// width: 100%;
 }
 
 
