width 100% featured articles

--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -447,8 +447,7 @@ hgroup.featured-articles-container{
 	// gap: 0px;
 	justify-content: center;
 	align-content: stretch;
-	// SKYHI
-	// width: 100%;
+	width: 100%;
 }
 
 
