not using js no-loading-transitions (at the moment)

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -3,7 +3,7 @@ $main_color: #fe9234;
 $soft_color: change-color($main_color, $saturation: 60%, $lightness: 40%);
 
 
-@import "preload.scss";
+// @import "preload.scss";
 @import "fonts.scss";
 @import "utility-classes.scss";
 @import "shortcodes.scss";
