no title and not pfp image by default

--- a/layouts/partials/profile_resume.html
+++ b/layouts/partials/profile_resume.html
@@ -1,11 +1,11 @@
   <hgroup class="profile-resume">
-    {{ if .Title }}
+    {{- /*  {{ if .Title }}
       <h2 class="bloom-shadow">{{ .Title }}</h2>
     {{ end }}
 
     <a href='{{ ref . "about" }}'>
       <img id="szk_pfp" src="{{ .Params.profile_picture }}">
-    </a>
+    </a>  */ -}}
 
     {{/*  Original  */}}
     {{/*  {{ .Content | markdownify}}  */}}
