--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -174,6 +174,10 @@ $article-card-hover-brightness: 30%;
 			transform: scaleX(1);
 			transform-origin: bottom left;
 		  }
+		& img{
+			// transform: scale(1.5);
+			transform: scale(1.0);
+		}
 	}
 
 
@@ -195,10 +199,6 @@ $article-card-hover-brightness: 30%;
 		object-fit: cover;
 		// object-fit: fill;
 
-		&:hover{
-			// transform: scale(1.5);
-			transform: scale(1.0);
-		}
 	}
 
 	& .article-info{
